PHRAS_3665 shared basket fix calendar z-index-issue (#4065)

--- a/Phraseanet-production-client/src/skins/style/skin-shared.scss
+++ b/Phraseanet-production-client/src/skins/style/skin-shared.scss
@@ -331,7 +331,7 @@ span.ww_winTitle {
 }
 
 #ui-datepicker-div {
-    z-index: 2000;
+    z-index: 2000 !important;
     background-color: $darkerBackgroundColor;
     position: absolute;
 }
